--- a/css/styles.css
+++ b/css/styles.css
@@ -15,21 +15,20 @@ header {
   height: 100vh;
 }
 ul li.nav-item {
-  margin-left: 450px;
+  margin-left: 400px;
   margin-top: 70px;
-  border: 2px solid #fff;
   background-color: var(--white-color);
-  border-radius: 20px;
+  border-radius: 30px;
+}
+.flip-link {
+  margin-left: 110px;
 }
 ul.navbar-nav li a {
   color: var(--bg-black);
   font-weight: bold;
   font-size: 1.1rem;
 }
-/* .flip-link {
-  width: 50px;
-  height: 50px;
-} */
+
 ul.navbar-nav li a img {
   border-radius: 50%;
   width: 30px;
@@ -54,7 +53,7 @@ nav.nav a {
 }
 .main-text {
   margin: 30px;
-  padding: 0 0 0 0%;
+  padding: 9% 0 0 0%;
 }
 .main-text h2 {
   font-size: 4rem;
@@ -62,9 +61,12 @@ nav.nav a {
 .main-header {
   max-width: 100%;
 }
-.main-header h2 {
+.main-header h3 {
   font-weight: 900;
   text-align: center;
+  font-size: 3.8rem;
+  max-width: 500px;
+  line-height: 1;
 
   /* text-overflow: ; */
 }
@@ -72,7 +74,8 @@ nav.nav a {
   color: #abfb04;
 }
 #cup {
-  margin-left: 200px;
+  margin-left: 250px;
+  margin-top: 140px;
 }
 #goggles {
   margin-left: -70px;
@@ -108,7 +111,7 @@ nav.nav a {
   display: flex;
   flex-direction: column;
   margin-left: 100px;
-  margin-top: 50px;
+  margin-top: 20px;
 }
 .right-images img {
   max-width: 100px;
@@ -125,7 +128,7 @@ nav.nav a {
   }
 }
 .main-buttons {
-  margin-top: 50px;
+  margin-top: 30px;
   padding-left: 120px;
 }
 @media (max-width: 700px) {
@@ -165,27 +168,29 @@ nav.nav a {
   margin-right: 5px;
   font-size: 1.2rem;
 }
-.rainbow {
+/* .rainbow {
   margin-top: 150px;
-}
-.color-one {
+} */
+/* .color-one {
   width: 100%;
-  height: 50px;
+  height: 200px;
+  border-radius: 50%;
   background: cornflowerblue;
-}
-.color-two {
+} */
+/* .color-two {
   width: 100%;
-  height: 100px;
+  height: 200px;
+  border-radius: 50%;
+  border-top: none;
   background: greenyellow;
-}
-.hero {
-  background-color: var(--bg-black);
-  padding-top: 100px;
-  width: 100%;
-}
+} */
 .hero {
   position: relative;
   z-index: 1;
+  background-color: var(--bg-black);
+  padding-top: 30px;
+  border-top: none;
+  width: 100%;
 }
 .inner-img img {
   position: absolute;
@@ -204,7 +209,7 @@ nav.nav a {
 
 .flipacks {
   background-color: var(--bg-black);
-  padding-top: 150px;
+  padding-top: 50px;
 }
 .flipack-text {
   margin-top: 80px;
@@ -234,6 +239,7 @@ nav.nav a {
   background-color: #2c3cfc;
   color: var(--white-color);
   padding-top: 50px;
+  max-width: 100%;
 }
 .savings h3 {
   background-color: pink;
@@ -261,10 +267,15 @@ nav.nav a {
   width: 40px;
   height: 40px;
 }
-.savings-logo img {
-}
+
 .savings-img {
   max-width: 300px;
+}
+@media (max-width: 600px) {
+  .savings-img img {
+    width: 100%;
+    display: block;
+  }
 }
 .savings-img img {
   width: 100%;
